fix spacing on homepage between years

--- a/themes/pdp80-theme/assets/css/pdp.css
+++ b/themes/pdp80-theme/assets/css/pdp.css
@@ -116,6 +116,7 @@ a, #title, #post-list a:hover, #title:hover {
 
 ol, ul {
   margin-left: 27px;
+  margin-bottom: 10px;
 }
 
 mark {
